# regexC

./: Tests.hs  regexc.cabal
Text/: RegexC.hs
